--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     
     <main>
       <section class="player player--0 player--active">
-        <h2 class="name" id="name--0">Player 1</h2>
+        <h2 class="name" id="name--0">Player 1<br>
+        <span>WINS</span></h2>
         <p class="score" id="score--0">43</p>
         <div class="current">
           <p class="current-label">Current</p>
@@ -19,7 +20,8 @@
         </div>
       </section>
       <section class="player player--1">
-        <h2 class="name" id="name--1">Player 2</h2>
+        <h2 class="name" id="name--1">Player 2<br>
+          <span>WINS</span></h2>
         <p class="score" id="score--1">24</p>
         <div class="current">
           <p class="current-label">Current</p>
@@ -40,7 +42,7 @@
         If the player rolls a 1, they score nothing and it becomes the next player's turn.<br>
         If the player rolls any other number, it is added to their turn total and the player's turn continues.<br>
         If a player chooses to "hold", their turn total is added to their score, and it becomes the next player's turn.<br>
-        The first player to score 20 or more points wins.</p>
+        The first player to score 30 or more points wins.</p>
     </div>
     <script src="script.js"></script>
   </body>
