--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       <button class="btn btn--new">💻 New game</button>
       <button class="btn btn--roll">🎲 Roll dice</button>
       <button class="btn btn--hold">📥 Hold</button>
-      <button class="btn btn--rules">📖 Rules</button>
+      <button id="rules-btn" class="btn btn--rules">📖 Rules</button>
     </main>
-    <div class="rules hid" >
+    <div class="rules hid"  >
       <h1>Rules of Pig Dice Game</h1>
       <p>Each turn, a player repeatedly rolls a die until either a 1 is rolled or the player decides to "hold":<br>
 
